@@ -4434,6 +4434,9 @@ The following flags are also supported:
 <dt>~
 <dd>Can read and write the adminchat with the <b>/ma</b> command. All referees
 	and all	other players with the ~ flag will be able to read this chat
+<dt>&
+<dd>Can rename himself regardless of
+    <a href="#g_maxNameChanges">g_maxNameChanges</a> limit
 </dl>
 <br>
 The following operators are supported in the flags field:
